--- a/_config.yml
+++ b/_config.yml
@@ -2,15 +2,15 @@
 title: 读立写生
 header-img: "img/green.jpg"
 tagline: "cn"  
-description: "郝廷有|三十而立"  
+description: "陈素封|读而立·写而生"  
 baseurl: ""
-url: "http://loen.space"  
+url: "http://cnfeat"  
 
 # About/contact
 owner: 
-  name: " Hao, Tingyou"
-  email: pilykevin@gmail.com
-  bio: "萧瑟寒风中前行"
+  name: " CnFeat"
+  email: CnFeat@gmail.com
+  bio: "写就是写的报酬"
 
 # Data
 gavatar: http://dreamofbook.qiniudn.com/Az..png
