--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 title: 读立写生
 header-img: "img/green.jpg"
 tagline: "cn"  
-description: "陈素封|读而立·写而生"  
+description: "郝廷有|读而立·写而生"  
 baseurl: ""
-url: "http://cnfeat"  
+url: "http://loen.space"  
 
 # About/contact
 owner: 
